--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,19 +1,26 @@
-name: CI
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, feat/*, fix/*, chore/* ]
+    branches: [ main ]
+    tags:
+      - 'v*'
   pull_request:
     branches: [ main ]
+  release:
+    types: [ published ]
+
+permissions:
+  contents: write  # Required for semantic-release to push tags and create releases
+  issues: write    # Required for semantic-release to create failure issues
+
+env:
+  NODE_VERSION: '22'
 
 jobs:
   test:
-    name: Test on Node.js ${{ matrix.node-version }}
+    name: Test Suite
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [22.x, 23.x]
     
     services:
       postgres:
@@ -28,63 +35,75 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-    
+
+    strategy:
+      matrix:
+        node-version: [22.x, 23.x]
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
+
     - name: Install dependencies
       run: npm ci
-    
-    - name: Run type check
+
+    - name: Type check
       run: npm run type-check
-    
-    - name: Run linting
+
+    - name: Lint
       run: npm run lint
-    
-    - name: Run unit tests
-      run: npm test
-    
-    - name: Run integration tests
+
+    - name: Format check
+      run: npm run format:check
+
+    - name: Build
+      run: npm run build
+
+    - name: Test - Unit
+      run: npm run test
+
+    - name: Test - Integration
       run: npm run test:integration
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test
-    
-    - name: Build package
-      run: npm run build
+        NODE_ENV: test
 
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: [test]
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    
+
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: 22.x
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-    
+
     - name: Install dependencies
       run: npm ci
-    
-    - name: Build package
+
+    - name: Build
       run: npm run build
-    
+
+    - name: Configure NPM Authentication
+      run: |
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+        echo "registry=https://registry.npmjs.org/" >> ~/.npmrc
+
     - name: Release
+      run: npm run release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: npx semantic-release
