--- a/package.json
+++ b/package.json
@@ -98,6 +98,10 @@
   "peerDependencies": {
     "pg": ">=8.0.0"
   },
+  "overrides": {
+    "tar-fs": ">=3.1.1",
+    "tmp": ">=0.2.4"
+  },
   "dependencies": {
     "@xenova/transformers": "^2.17.2",
     "p-queue": "^8.0.0",
