--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -27,10 +27,7 @@ jobs:
       run: npm ci
 
     - name: Run security audit
-      run: npm audit --audit-level=moderate
-
-    - name: Check for known vulnerabilities
-      run: npx audit-ci --moderate
+      run: npx audit-ci --config audit-ci.json
 
   # Dependency review is commented out for private repositories
   # Uncomment when repository is made public or GitHub Advanced Security is enabled
