--- a/package.json
+++ b/package.json
@@ -100,7 +100,8 @@
   },
   "overrides": {
     "tar-fs": ">=3.1.1",
-    "tmp": ">=0.2.4"
+    "tmp": ">=0.2.4",
+    "glob": "^10.5.0"
   },
   "dependencies": {
     "@xenova/transformers": "^2.17.2",
@@ -111,6 +112,7 @@
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
+    "audit-ci": "^7.1.0",
     "@commitlint/config-conventional": "^19.8.1",
     "@semantic-release/changelog": "^6.0.3",
     "@types/node": "^24.1.0",
